Release v9.0.14 Remember me and ref fixed